Git Tests/force-app/main/default/default/objects/Setorizacao__c/Setorizacao__c.object-meta.xml
<CustomObject>
    <label>Setorização</label>
    <nameField>
        <displayFormat>SET-{000000}</displayFormat>
        <label>Número da setorização</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setorizações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>