Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <label>GENÉRICO</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>MATERIAIS</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NUTRIÇÃO</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Medctech</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SPECIALTY</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>AMBOS</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>DIABETES</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>ODONTOLOGIA</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>EQUIPAMENTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>