Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>