Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Setorização</relationshipLabel>
    <relationshipName>Setorizacao</relationshipName>
    <type>Lookup</type>
</CustomField>