Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SetorizacoesCoordenador</relationshipName>
    <type>Lookup</type>
</CustomField>