Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/DataFinal__c.field-meta.xml
<CustomField>
    <fullName>DataFinal__c</fullName>
    <label>Data final</label>
    <type>Date</type>
</CustomField>