Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/DataInicial__c.field-meta.xml
<CustomField>
    <fullName>DataInicial__c</fullName>
    <label>Data inicial</label>
    <type>Date</type>
</CustomField>