Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor do produto</label>
    <referenceTo>Fornecedor__c</referenceTo>
    <relationshipLabel>Setorização</relationshipLabel>
    <relationshipName>Setorizacao</relationshipName>
    <type>Lookup</type>
</CustomField>