Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente externo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Setor</relationshipName>
    <type>Lookup</type>
</CustomField>