Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <formula>Conta__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Município</label>
    <type>Text</type>
</CustomField>