Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/NumeroRegistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroRegistro__c</fullName>
    <label>Número do registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>