Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Setorização</relationshipLabel>
    <relationshipName>Setorizacao</relationshipName>
    <type>Lookup</type>
</CustomField>