Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <label>Região</label>
    <length>2</length>
    <type>Text</type>
</CustomField>