Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/SegmentoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCliente__c</fullName>
    <formula>Conta__r.SegmentoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento do cliente</label>
    <type>Text</type>
</CustomField>