Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <length>5</length>
    <type>Text</type>
</CustomField>