Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Bio Sugery</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Asp</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Gore</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Hospitalar</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Ethicon Suturas</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>LifeScan</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Oncologicos</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Home Pump</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Sryker</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Ethicon</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vascular</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>BW</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Mentor</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Mindary</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Boston</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>