Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <description>Público
Privado
Misto</description>
    <formula>Conta__r.TipoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Público | Privado | Misto.</inlineHelpText>
    <label>Tipo do cliente</label>
    <type>Text</type>
</CustomField>