Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoa__c</fullName>
    <formula>Conta__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Física/Jurídica</label>
    <type>Text</type>
</CustomField>