Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/TipoVendedor__c.field-meta.xml
<CustomField>
    <fullName>TipoVendedor__c</fullName>
    <label>Tipo do vendedor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>