Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuário</label>
    <length>6</length>
    <type>Text</type>
</CustomField>