Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VDE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Setorizacao</relationshipName>
    <type>Lookup</type>
</CustomField>