Git Tests/force-app/main/default/default/objects/Setorizacao__c/fields/VendedorSuporte__c.field-meta.xml
<CustomField>
    <fullName>VendedorSuporte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VDI</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SetorizacoesVendedor</relationshipName>
    <type>Lookup</type>
</CustomField>